<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/search"
        app:iconTint="@color/optionsMenuItems"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/favorite"
        app:iconTint="@color/optionsMenuItems"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>